# field_config

./: README.md  pyproject.toml
src/field_config/: __init__.py  field_config.py  field_row.py  utils.py
tests/field_config/: conftest.py  test_field_config.py  test_utils.py
tests/field_config/data/: __init__.py  example1_plot_borders.dbf  example1_plot_borders.prj  example1_plot_borders.shp  example1_plot_borders.shx  field_config_example_1.yml
