[project]
name = "field_config"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Petti", email = "djpetti@gmail.com"},
]
dependencies = [
    "numpy>=1.24.4",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "setuptools>=75.1.0",
]
