[project]
name = "field_config"
version = "0.3.0"
description = "Default template for PDM package"
authors = [
    {name = "Daniel Petti", email = "djpetti@gmail.com"},
]
dependencies = [
    "numpy>=1.21.2",
    "tabulate>=0.9.0",
    "shapely>=2.0.6",
    "more-itertools>=10.5.0",
]
requires-python = ">=3.8"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false

[tool.pdm.dev-dependencies]
dev = [
    "pytest>=8.3.3",
    "pyyaml>=6.0.2",
    "setuptools>=75.1.0",
    "black>=24.8.0",
    "geopandas>=0.13.2",
    "fiona==1.9.6",
]

[tool.black]
line-length = 79
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.venv
    | build
    | dist
  )/
)
'''
